--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,12 +1,20 @@
-    <div id="user-container">
-        <input type="email" id="userEmail" placeholder="Ingresa tu correo electrónico" />
-        <button id="joinChat">Unirse al Chat</button>
-    </div>
-    <div id="chat-container" style="display:none;">
-        <ul id="messages"></ul>
-        <form id="form" action="">
-            <input id="input" autocomplete="off" placeholder="Escribe tu mensaje aquí..." /><button>Enviar</button>
-        </form>
-    </div>
+<div class="container mt-5">
+  <div id="user-container" class="text-center">
+    <input type="email" id="userEmail" class="form-control mb-3" placeholder="Ingresa tu correo electrónico">
+    <button id="joinChat" class="btn btn-primary">Unirse al Chat</button>
+  </div>
+
+  <div id="chat-container" class="mt-4" style="display:none;">
+    <ul id="messages" class="list-group"></ul>
+    <form id="form" action="" class="mt-3">
+      <div class="input-group">
+        <input id="input" class="form-control" autocomplete="off" placeholder="Escribe tu mensaje aquí...">
+        <div class="input-group-append">
+          <button class="btn btn-primary" type="button">Enviar</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
     <script src="js/chat.js"></script>
