--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,20 +1,18 @@
-<div class="container mt-5">
-  <div id="user-container" class="text-center">
-    <input type="email" id="userEmail" class="form-control mb-3" placeholder="Ingresa tu correo electrónico">
-    <button id="joinChat" class="btn btn-primary">Unirse al Chat</button>
-  </div>
-
-  <div id="chat-container" class="mt-4" style="display:none;">
-    <ul id="messages" class="list-group"></ul>
-    <form id="form" action="" class="mt-3">
-      <div class="input-group">
-        <input id="input" class="form-control" autocomplete="off" placeholder="Escribe tu mensaje aquí...">
-        <div class="input-group-append">
-          <button class="btn btn-primary" type="button">Enviar</button>
+    <div class="container mt-5">
+        <div id="user-container" class="text-center">
+            <input type="email" id="userEmail" class="form-control mb-2" placeholder="Ingresa tu correo electrónico" />
+            <button id="joinChat" class="btn btn-primary">Unirse al Chat</button>
         </div>
-      </div>
-    </form>
-  </div>
-</div>
+        <div id="chat-container" class="mt-3" style="display:none;">
+            <ul id="messages" class="list-unstyled"></ul>
+            <form id="form" action="" class="form-inline">
+                <input id="input" class="form-control mr-2" autocomplete="off" placeholder="Escribe tu mensaje aquí..." />
+                <button class="btn btn-success">Enviar</button>
+            </form>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.min.js"></script>
     <script src="js/chat.js"></script>
