--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,10 +1,10 @@
-    <div class="container mt-5">
+    <div class="container">
         <div id="user-container" class="text-center">
             <input type="email" id="userEmail" class="form-control mb-2" placeholder="Ingresa tu correo electrónico" />
-            <button id="joinChat" class="btn btn-primary">Unirse al Chat</button>
+            <button id="joinChat" class="btn btn-primary mt-2">Unirse al Chat</button>
         </div>
         <div id="chat-container" class="mt-3" style="display:none;">
-            <ul id="messages" class="list-unstyled"></ul>
+            <ul id="messages" class="list-unstyled chatMessage"></ul>
             <form id="form" action="" class="form-inline">
                 <input id="input" class="form-control mr-2" autocomplete="off" placeholder="Escribe tu mensaje aquí..." />
                 <button class="btn btn-success">Enviar</button>
