--- a/src/views/realtimeproducts.handlebars
+++ b/src/views/realtimeproducts.handlebars
@@ -33,7 +33,7 @@
                 <option value="false">Inactivo</option>
             </select>
         </div>
-        <button type="button" class="btn btn-primary" id="btnEnviar">Enviar</button>
+        <button type="button" class="btn btn-primary" id="btnEnviar">Agregar producto</button>
     </form>
 </div>
 
